[project]
name = "vidtoolz-intro"
version = "0.1.1"
description = "Create intro video from a series of videos"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
    "vidtoolz-concat",
    "vidtoolz-trim",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-intro"
Changelog = "https://github.com/sukhbinder/vidtoolz-intro/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-intro/issues"
CI = "https://github.com/sukhbinder/vidtoolz-intro/actions"

[project.entry-points."vidtoolz_plugins"]
intro = "vidtoolz_intro:intro_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
